--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "منصة PredictBattle للتوقعات الجماعية",
   "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "server": "nodemon server.js",
-      "client": "cd client && npm start",
-      "dev": "concurrently \"npm run server\" \"npm run client\"",
-      "install-client": "cd client && npm install",
-      "install-all": "npm install && npm run install-client",
-      "build": "cd client && npm install && npm run build",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
+  "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "cd client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "install-client": "cd client && npm install",
+    "install-all": "npm install && npm run install-client",
+    "build": "cd client && npm install && npm run build",
+    "vercel-build": "bash ./build.sh",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
   },
   "keywords": [
     "predictions",
