--- a/vercel.json
+++ b/vercel.json
@@ -6,21 +6,26 @@
         "use": "@vercel/node"
       },
       {
-        "src": "client/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build"
-        }
+        "src": "client/build/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "server.js"
+        "dest": "/server.js"
+      },
+      {
+        "src": "/static/(.*)",
+        "dest": "/client/build/static/$1"
+      },
+      {
+        "src": "/(.+\\.[a-zA-Z0-9]+)$",
+        "dest": "/client/build/$1"
       },
       {
         "src": "/(.*)",
-        "dest": "client/build/$1"
+        "dest": "/client/build/index.html"
       }
     ]
   }
