--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,7 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "client/build/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/server.js"
-      },
-      {
-        "src": "/static/(.*)",
-        "dest": "/client/build/static/$1"
-      },
-      {
-        "src": "/(.+\\.[a-zA-Z0-9]+)$",
-        "dest": "/client/build/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/client/build/index.html"
-      }
+    "buildCommand": "npm run build",
+    "outputDirectory": "client/build",
+    "rewrites": [
+      { "source": "/api/(.*)", "destination": "/api/$1" }
     ]
   }
