--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,26 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": "client/build",
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/$1" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/build/index.html"
+    }
+  ]
+}
