--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "install-client": "cd client && npm install",
     "install-all": "npm install && npm run install-client",
-    "build": "cd client && npm install && npm run build",
-    "vercel-build": "bash ./build.sh",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
+    "build": "node build.js",
+    "vercel-build": "npm run build"
   },
   "keywords": [
     "predictions",
